Delete Transaction completed
